<resources>
    <string name="app_name">MoviesManager</string>
    <string name="name">Name</string>
    <string name="duration">Duration in minutes</string>
    <string name="movie_name">Movie Name</string>
    <string name="release_year">Release Year</string>
    <string name="producer_or_studio">Producer or Studio</string>
    <string name="flaag">Flaag</string>
    <string name="grade">Grade</string>
    <string name="save">Save</string>
    <string name="add_movie">Add movie</string>
    <string name="remove_movie">Remove movie</string>
    <string name="edit_movie">Edit movie</string>
    <string name="visualized">Visualized</string>
    <string name="order_name">Order Name</string>
    <string name="order_grade">Order Grade</string>

    <string-array name="genre">
        <item>Adventure</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Gospel</item>
        <item>Horror</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>Suspense</item>
    </string-array>

</resources>